Agendas: Changed duration format from mins to hrs/mins

--- a/core/templates/agenda_edit.html
+++ b/core/templates/agenda_edit.html
@@ -71,12 +71,12 @@
 					<td>{{ meeting.start_time }}</td>
 				</tr>
 				<tr>
-					<td><strong>Scheduled duration</strong></td>
-					<td>{{ meeting_duration }} minutes</td>
-				</tr>
-				<tr>
 					<td><strong>End time</strong></td>
 					<td>{{ meeting_end_time }}</td>
+				</tr>
+				<tr>
+					<td><strong>Scheduled duration</strong></td>
+					<td>{{ meeting_duration }}</td>
 				</tr>
 				<tr>
 					<td><strong>Location</strong></td>
