--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -9,6 +9,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
+		
+		<link rel="shortcut icon" href="{% static 'images/econvenor-favicon-v1.ico' %}">
 
 		<title>eConvener</title>
 
