--- a/core/templates/base_index.html
+++ b/core/templates/base_index.html
@@ -9,7 +9,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="description" content="">
 		<meta name="author" content="">
-
+		<link rel="shortcut icon" href="{% static 'images/econvenor-favicon-v1.ico' %}">
+		
 		<title>eConvener</title>
 
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
