--- a/core/templates/base_index.html
+++ b/core/templates/base_index.html
@@ -14,7 +14,8 @@
 		<title>eConvener</title>
 
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-		<link href="{% static 'css/econvener.css' %}" rel="stylesheet">
+    	<link href="css/font-awesome.min.css" rel="stylesheet">
+    	<link href="{% static 'css/econvener.css' %}" rel="stylesheet">
 		<link href="{% static 'css/fonts.css' %}" rel="stylesheet">
 	</head>
 
