--- a/core/static/css/econvener.css
+++ b/core/static/css/econvener.css
@@ -1,4 +1,25 @@
 /*
+ * Fonts
+ *
+ * Specify fonts.
+ */
+
+@font-face {
+  font-family: 'Body font';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Ubuntu');
+}
+
+@font-face {
+  font-family: 'Heading font';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Ubuntu');
+}
+
+
+/*
  * Page body
  *
  * Add padding beneath navbar and adjust background colour.
