--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -15,7 +15,7 @@
 		<title>eConvener</title>
 
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
-		<link href="css/font-awesome.min.css" rel="stylesheet">
+		<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
 		<link href="{% static 'css/econvener.css' %}" rel="stylesheet">
 		<link href="{% static 'css/jqueryui-1.10.3.smoothness.css' %}" rel="stylesheet">
 	</head>
