Added content to landing page

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -56,14 +56,14 @@
     <div class="jumbotron" id="hero">
       <div class="container">
         <h1 class="text-center">Make organising your group less work.</h1>
-        <h2 class="text-center">eConvenor is free and will be available from April 2nd.</h2>
+        <h2 class="text-center">It's free and available from April 2nd.</h2>
       </div><!-- /.container -->
     </div> <!-- /.jumbotron -->
 
     <!-- SECTION 1
     ================================================== -->
-    <div id="section1">
-      <div class="container thin-columns">
+    <div class="section" id="section1">
+      <div class="container columns">
         <div class="row">
         
         <!-- Column 1 -->
@@ -108,23 +108,23 @@
                          
         </div><!-- /.row --> 
       </div><!-- /.container -->
-    </div><!-- /#section1 -->
+    </div><!-- /.section -->
 
     <!-- DIVIDER 1
     ================================================== -->
-    <div class="jumbotron" id="divider1">
+    <div class="jumbotron divider orange-background">
       <div class="container">
-      	<h1 class="text-center">Sometimes the best person for the job is a computer.</h1>
-      	<h2 class="text-center">eConvenor does its work on time, has high standards and never forgets anything.</h2>
+      	<h1 class="text-center">Built by activists, for activists.</h1>
+      	<h2 class="text-center">eConvenor is a free service to help activist groups everywhere be better organised.</h2>
       </div><!-- /.container -->
     </div> <!-- /.jumbotron -->
 
     <!-- SECTION 2
     ================================================== -->
-    <div id="section2">
-      <div class="container wide-columns">
+    <div class="section" id="section2">
+      <div class="container columns">
     
-        <h1>What can eConvenor do for you?</h1>
+        <h1>What does eConvenor do?</h1>
         <p class="lead">eConvenor is a free online tool for grassroots campaigns and community groups. It does the boring bits of group organising, so you can get on with the real work.<span class="orange">&nbsp It's your virtual secretary, convenor and coordinator.</span></p>      
         
         <div class="row">
@@ -132,23 +132,23 @@
           <div class="col-md-6">
             <ul class="fa-ul">
             <!-- Left column item 1 -->
-              <li><i class="fa-li fa fa-users fa-3x red"></i>
+              <li><i class="fa-li fa fa-users fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead red">Keep your group in the loop</p></li>
+                  <li><p class="lead orange">Keeps your group in the loop</p></li>
                   <li><p>Your account will hold contact details for your active members, so that you can send emails to the group, assign tasks, and set email reminders for them.</p></li>
                 </ul>
               </li>
               <!-- Left column item 2 -->
               <li><i class="fa-li fa fa-file-text-o fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead orange">Pull together your meeting agendas</p></li>
+                  <li><p class="lead orange">Pulls together your meeting agendas</p></li>
                   <li><p>You can use our agenda templates or create your own. The layout is done for you and you can estimate time for the meeting based on how long you'd like to spend on each item. Each agenda will automatically include any unfinished business or tasks from the previous meeting.</p></li>
                 </ul>
               </li>
               <!-- Left column item 3 -->
-              <li><i class="fa-li fa fa-file-text fa-3x red"></i>
+              <li><i class="fa-li fa fa-file-text fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead red">Make writing and distributing minutes painless</p></li>
+                  <li><p class="lead orange">Creates and distributes minutes</p></li>
                   <li><p>When you're ready, crete a minutes template from the agenda with one click. You can print it and fill it out, or type the minutes straight in at the meeting. We've made sure there's clear space to record decisions and tasks, so they won't get lost, and you on't forget the point of the meeting.</p></li>
                 </ul>
               </li>
@@ -160,21 +160,21 @@
             <!-- Right column item 1 -->
               <li><i class="fa-li fa fa-check-square-o fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead orange">Track and follow up tasks</p></li>
+                  <li><p class="lead orange">Tracks and follows up tasks</p></li>
                   <li><p>A task list will be automatically created from your minutes, with the due date and the person who said they'd do it. You'll be able to see the whole list at any time, see any overdue tasks, and set automatic email reminders for those with tasks.</p></li>
                 </ul>
               </li>
               <!-- Right column item 2 -->
-              <li><i class="fa-li fa fa-list fa-3x red"></i>
+              <li><i class="fa-li fa fa-list fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead red">Collate and search decisions</p></li>
+                  <li><p class="lead orange">Collates and searches decisions</p></li>
                   <li><p>The decisions you make at your meetings ill be recorded in a master-list, so you can search through them later to find out what you decided last time, and look up the minutes from the time.</p></li>
                 </ul> 
               </li>
               <!-- Right column item 3 -->
               <li><i class="fa-li fa fa-archive fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead orange">Organise your meeting records</p></li>
+                  <li><p class="lead orange">Organises your meeting records</p></li>
                   <li><p>*** Some text about keeping your agendas and minutes in one place and well organised rather than in a dropbox or googkle drive account.***</p></li>
                 </ul> 
               </li>              
@@ -183,34 +183,141 @@
           
         </div><!-- /.row -->
       </div><!-- /.container -->
-    </div><!-- /#section2 -->
+    </div><!-- /.section -->
+
+    <!-- DIVIDER 2
+    ================================================== -->
+    <div class="jumbotron divider red-background">
+      <div class="container">
+      	<h1 class="text-center">Sometimes the best person for the job is a computer.</h1>
+      	<h2 class="text-center">eConvenor does its work on time, has high standards and never forgets anything.</h2>
+      </div><!-- /.container -->
+    </div> <!-- /.jumbotron -->
 
     <!-- SECTION 3
     ================================================== -->
-    <div id="section3">
-      <div class="container wide-columns">
+    <div class="section" id="section3">
+      <div class="container columns">
+    
+        <h1>Who can use eConvenor?</h1>
+        <p class="lead">eConvenor is for grassroots campaigns, non-government organisations (NGOs), progressive service providers and activist groups.<span class="red">&nbsp Your group must have a socially-just, progressive focus.</span></p>      
+        
         <div class="row">
-          <div class="col-lg-6">
-            <h2>Left column heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          </div><!-- /.col-lg-6 -->
-          <div class="col-lg-6">
-            <h2>Right column heading</h2>
-            <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-          </div><!-- /.col-lg-6 -->
+          
+          <div class="col-md-6">
+            <h2>eConvenor is for groups like these</h2>
+            <ul class="fa-ul">
+            <!-- Left column item 1 -->
+              <li><i class="fa-li fa fa-check-circle fa-3x red"></i>
+                <ul>
+                  <li><p class="lead red">A collective in the Philippines</p></li>
+                  <li><p>which is trying to improve wheelchair access to public buildings in their local area. They have 12 activists and no budget.</p></li>
+                </ul>
+              </li>
+              <!-- Left column item 2 -->
+              <li><i class="fa-li fa fa-check-circle fa-3x red"></i>
+                <ul>
+                  <li><p class="lead red">A UK domestic violence crisis service</p></li>
+                  <li><p>which is run by 7 staff, who help 300 women every year. They have a volunteer board of directors.</p></li>
+                </ul>
+              </li>
+              <!-- Left column item 3 -->
+              <li><i class="fa-li fa fa-check-circle fa-3x red"></i>
+                <ul>
+                  <li><p class="lead red">An anti-fracking campaign in Poland</p></li>
+                  <li><p> whcih has a national committee, local sub-committees and 200 campaigners. Their budget stretches to printing posters and paying one part-time staff member.</p></li>
+                </ul>
+              </li>
+            </ul><!-- /.fa-ul -->
+          </div><!-- /.col-md-6 -->
+              
+          <div class="col-md-6">
+            <h2>It's not for everyone though</h2>
+            <p class="lead">We built eConvenor to make the world a better place.</p> 
+            <p class="lead">You must not use eConvenor if your group:</p>
+            <ul class="fa-ul">
+              <li><i class="fa-li fa fa-times-circle fa-3x red"></i>
+                <p class="lead fa-align red">is conservative or oppressive</p></li>
+              <li><i class="fa-li fa fa-times-circle fa-3x red"></i>
+                <p class="lead fa-align red">operates for profit</p></li>
+              <li><i class="fa-li fa fa-times-circle fa-3x red"></i>
+                <p class="lead fa-align red">is a government agency</p></li>
+              <li><i class="fa-li fa fa-times-circle fa-3x red"></i>
+                <p class="lead fa-align red">is a major political party or</p></li>
+              <li><i class="fa-li fa fa-times-circle fa-3x red"></i>
+                <p class="lead fa-align red">aims to spread religion.</p></li>
+            </ul><!-- /.fa-ul -->
+          </div><!-- /.col-md-6 -->
+          
         </div><!-- /.row -->
       </div><!-- /.container -->
-    </div><!-- /#section3 -->
-      
-    <!-- FOOTER
+    </div><!-- /.section -->          
+
+    <!-- DIVIDER 3
     ================================================== -->
-    <div id="footer">
+    <div class="jumbotron divider orange-background">
       <div class="container">
-        
-        <p>This is footer placeholder text</p>
-        
-      </div><!-- /.container -->      
-    </div><!-- /footer>   
+      	<h1 class="text-center">Keep your group in the loop.</h1>
+      	<h2 class="text-center">eConvenor automagically does half the work of agendas and minutes for you.</h2>
+      </div><!-- /.container -->
+    </div> <!-- /.jumbotron -->
+
+    <!-- SECTION 4
+    ================================================== -->
+    <div class="section" id="section4">
+      <div class="container columns">
+    
+        <h1>eConvenor is free!</h1>
+        <p class="lead"><span class="orange">This is an open source project and we aim to make the eConvenor service available as widely as we can.</span> &nbsp This means eConvenor is free for almost everyone, and we ask better funded groups to contribute financially.</p>      
+
+        <div class="row">
+          <div class="col-md-6">
+            <h2>From each according to their means</h2>
+            <ul class="fa-ul">
+              <li><i class="fa-li fa fa-th fa-3x orange"></i>
+                <ul>
+                  <li><p class="lead orange">Most groups</p></li>
+                  <li><p>Most groups can use eConvenor completely free. No obligation, no worries.</p></li>
+                </ul>
+              </li>
+              <li><i class="fa-li fa fa-th-large fa-3x orange"></i>
+                <ul>
+                  <li><p class="lead orange">Groups which can afford a donation</p></li>
+                  <li><p>Groups who feel that they can afford to should contribute a donation to eConvenor when they can.</p></li>
+                </ul>                
+              </li>
+              <li><i class="fa-li fa fa-square fa-3x orange"></i>
+                <ul>
+                  <li><p class="lead orange">Political parties and trade unions</p></li>
+                  <li><p>Political parties and trade unions in high income countries who are progressive and committed to social justice can use eConvenor for a fee.</p></li>
+                </ul>                                
+              </li>
+            </ul><!-- /.fa-ul -->
+            <p>We rely on your honesty. We hope you will apply your ethics and contribute if you should. Donations help eConvenor grow and improve.</p>
+          </div><!-- /.col-md-6 -->
+          
+          <div class="col-md-6">
+            <h2>Contribute code to eConvenor</h2>
+              <p class="lead">Can you code in Python? If not, would you like to learn?</p>
+              <p class="lead">**Complete this block.**</p>              
+              <p class="lead">**Graphic** --> round eConvener logo element on the screen of a 'fa-laptop' character.</p>
+
+
+
+          </div><!-- /.col-md-6 -->
+          
+        </div><!-- /.row -->
+      </div><!-- /.container -->
+    </div><!-- /.section -->    
+
+    <!-- DIVIDER 4
+    ================================================== -->
+    <div class="jumbotron divider black-background">
+      <div class="container">
+      	<h1 class="text-center">eConvenor launches on April 2nd.</h1>
+      	<h2 class="text-center white">Please come back then and start using the service.</h2>
+      </div><!-- /.container -->
+    </div> <!-- /.jumbotron -->
    
     <!-- JavaScript
     ================================================== -->
