Completed overall look of landing page

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -199,7 +199,7 @@
     <div class="section" id="section3">
       <div class="container columns">
     
-        <h1>Who can use eConvenor?</h1>
+        <h1>Who is eConvenor for?</h1>
         <p class="lead">eConvenor is for grassroots campaigns, non-government organisations (NGOs), progressive service providers and activist groups.<span class="red">&nbsp Your group must have a socially-just, progressive focus.</span></p>      
         
         <div class="row">
@@ -217,7 +217,7 @@
               <!-- Left column item 2 -->
               <li><i class="fa-li fa fa-check-circle fa-3x red"></i>
                 <ul>
-                  <li><p class="lead red">A UK domestic violence crisis service</p></li>
+                  <li><p class="lead red">A domestic violence crisis service in the UK</p></li>
                   <li><p>which is run by 7 staff, who help 300 women every year. They have a volunteer board of directors.</p></li>
                 </ul>
               </li>
@@ -258,7 +258,7 @@
     <div class="jumbotron divider orange-background">
       <div class="container">
       	<h1 class="text-center">Keep your group in the loop.</h1>
-      	<h2 class="text-center">eConvenor automagically does half the work of agendas and minutes for you.</h2>
+      	<h2 class="text-center">eConvenor auto-magically does half the work of agendas and minutes for you.</h2>
       </div><!-- /.container -->
     </div> <!-- /.jumbotron -->
 
@@ -277,13 +277,13 @@
               <li><i class="fa-li fa fa-th fa-3x orange"></i>
                 <ul>
                   <li><p class="lead orange">Most groups</p></li>
-                  <li><p>Most groups can use eConvenor completely free. No obligation, no worries.</p></li>
+                  <li><p>Does your group have no budget or a tiny budget? eConvenor was built for you! You can use eConvenor completely free. No obligation, no worries.</p></li>
                 </ul>
               </li>
               <li><i class="fa-li fa fa-th-large fa-3x orange"></i>
                 <ul>
                   <li><p class="lead orange">Groups which can afford a donation</p></li>
-                  <li><p>Groups who feel that they can afford to should contribute a donation to eConvenor when they can.</p></li>
+                  <li><p>Groups who feel that they can afford to make a donation in return for using eConvenor should do so once each year.</p></li>
                 </ul>                
               </li>
               <li><i class="fa-li fa fa-square fa-3x orange"></i>
@@ -297,13 +297,31 @@
           </div><!-- /.col-md-6 -->
           
           <div class="col-md-6">
-            <h2>Contribute code to eConvenor</h2>
-              <p class="lead">Can you code in Python? If not, would you like to learn?</p>
-              <p class="lead">**Complete this block.**</p>              
-              <p class="lead">**Graphic** --> round eConvener logo element on the screen of a 'fa-laptop' character.</p>
-
-
-
+            <h2>Help build eConvenor</h2>
+              <ul class="fa-ul">
+                <li>
+                  <span class="fa-li fa fa-stack fa-xl">
+                    <i class="fa fa-square fa-stack-2x orange"></i>
+                    <i class="fa fa-terminal fa-stack-1x fa-inverse"></i>
+                  </span>
+                  <ul>
+                    <li><p class="lead orange">Can you code? Do you want to learn how?</p></li>
+                    <li><p>When you write code which improves and extends eConvenor, you help activist groups and campaigns around the world be more effective. If you're looking for a way to make a difference on a large scale, come and work on eConvenor with us.</p></li>
+                    <li><p>If you're an experienced coder, that's great. If not, we'll help you learn. We started coding not that long ago ourselves.</p></li>
+                    
+                  </ul>
+                  </li>
+                  <li>
+                  <span class="fa-li fa fa-stack fa-xl">
+                    <i class="fa fa-square fa-stack-2x orange"></i>
+                    <i class="fa fa-bug fa-stack-1x fa-inverse"></i>
+                  </span>
+                  <ul>
+                    <li><p class="lead orange">Bug reports help a lot</p></li>
+                    <li><p>Once eConvenor goes live, we will be relying on you to tell us when something doesn't work the way it should. This feedback will enable us to make eConvenor better and more reliable. When you find a bug, please take a few minutes to report it so that we can fix it.</p></li>
+                  </ul>
+                </li>
+              </ul><!-- /.fa-ul -->
           </div><!-- /.col-md-6 -->
           
         </div><!-- /.row -->
@@ -318,7 +336,17 @@
       	<h2 class="text-center white">Please come back then and start using the service.</h2>
       </div><!-- /.container -->
     </div> <!-- /.jumbotron -->
-   
+  
+    <!-- FOOTER
+    ================================================== -->  
+    <div class="section" id="footer">
+      <div class="container">
+        <p class="text-center">
+          <a class="email-link" href="mailto:mail@econvenor.org"><i class="fa fa-envelope fa-lg"></i>&nbsp mail@econvenor.org</a>
+        </p>
+      </div>
+    </div>
+     
     <!-- JavaScript
     ================================================== -->
 	<script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
