Changed hero image on landing page

--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -136,7 +136,7 @@ body {
 -------------------------------------------------- */
 
 #hero {
-  background-color: #000000;
+  background-color: #1a1a1a;
   margin-bottom: 0px;
   background-image: url(../images/hero.png);
   background-repeat: no-repeat;
