Replaced email address text on landing page with an image

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -342,7 +342,7 @@
     <div class="section" id="footer">
       <div class="container">
         <p class="text-center">
-          <a class="email-link" href="mailto:mail@econvenor.org"><i class="fa fa-envelope fa-lg"></i>&nbsp mail@econvenor.org</a>
+          <img src="{% static 'images/email-address-v1.png' %}">
         </p>
       </div>
     </div>
